Fixed small alignment error in mobile header

--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -156,7 +156,7 @@ header {
             width: 100%;
             height: 100%;
             right: 0px;
-            top: 90px;
+            top: 84px;
             background-color: $red;
 
             a {
